--- a/index.html
+++ b/index.html
@@ -29,17 +29,25 @@
             <h4>Try it free 7 days<span> then $20/mo. thereafter</span></h4>
             <form action="" id="form">
                 <label for="firstName">
-                    <input type="text" class="firstName" placeholder="First Name" />
+                    <div class="input-wrapper">
+                        <input type="text" class="firstName" placeholder="First Name" />
+                    </div>
                 </label>
                 <label for="lastName">
-                    <input type="text" class="lastName" placeholder="Last Name" />
+                    <div class="input-wrapper">
+                        <input type="text" class="lastName" placeholder="Last Name" />
+                    </div>
                 </label>
                 <label for="email">
-                    <input type="email" class="email" placeholder="Email" />
+                    <div class="input-wrapper">
+                        <input type="email" class="email" placeholder="Email" />
+                    </div>
                 </label>
                 <label for="password" id="password-label">
-                    <input type="password" class="password" placeholder="Password" />
-                    <span class="toggle-icon"></span>
+                    <div class="input-wrapper">
+                        <input type="password" class="password" placeholder="Password" />
+                        <span class="toggle-icon"></span>
+                    </div>
                 </label>
                 <button id="button">Claim your free trial</button>
                 <small>By clicking the button, you are agreeing to our
